# geo_analytics

./: Makefile  README.md  docker-compose.yml  package-lock.json
.cursor/rules/: geo-analytics-project.mdc
backend/: .env  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/app/api/: analytics.py  competitors.py  llm_responses.py  prompts.py  users.py
backend/app/core/: config.py
backend/app/database/: supabase_client.py
backend/app/models/: schemas.py
backend/app/services/: analytics_service.py  competitor_discovery.py  llm_service.py  prompt_generation.py
database/: schema.sql
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/ui/: card.tsx
frontend/src/hooks/: useApi.ts  useLocalStorage.ts
frontend/src/lib/: api.ts  encryption.ts  utils.ts
frontend/src/pages/: DashboardPage.tsx  OnboardingPage.tsx
frontend/src/types/: index.ts
